started on property setting via rdfelement, not compiling yet